# econlab

./: README.md  pyproject.toml  requirements.txt  structure.txt
.claude/: settings.local.json
cli/: main.py
data/: nbs_panel.csv
econlab/: __init__.py
econlab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
econlab/causal/: __init__.py  did.py  matching.py  rdd.py  staggered.py  synthetic.py
econlab/core/: __init__.py  iv.py  ols.py  quantile.py
econlab/diagnostics/: __init__.py  tests.py
econlab/panel/: __init__.py  gmm.py  re.py
econlab/robust/: __init__.py  bootstrap.py
econlab/timeseries/: __init__.py  cointegration.py  unitroot.py  var.py
econlab/utils/: __init__.py  io.py  nbs.py  power.py  tables.py  world_bank.py
examples/: wb_nbs_did_demo.py
tests/: test_diagnostics.py  test_did.py  test_iv.py  test_ols.py  test_rdd.py
